--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
       <base href="/"/>
       <title>React App</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-      <!-- <script src=".././src/lib/js/jquery.min.js"></script>
-      <script src=".././src/lib/js/bootstrap.min.js"></script> -->
+      <link rel="stylesheet" type="text/css" href="/src/sass_styles/css/design.css">
+      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+
    </head>
 
    <body>
