--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
       <link rel="stylesheet" type="text/css" href="/src/sass_styles/css/design.css">
       <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 
    </head>
 
@@ -16,3 +17,5 @@
    </body>
 
 </html>
+
+
